# Thoth

./: .gitignore  .lldbinit  CMakeLists.txt  Doxyfile  README.md  __base_8hpp_source.html  __pch_8hpp.html  __pch_8hpp__dep__incl.map  __pch_8hpp__dep__incl.md5  __pch_8hpp__incl.map  __pch_8hpp__incl.md5  __pch_8hpp_source.html  _accept_encoding_enum_8hpp.html  _accept_encoding_enum_8hpp.js  _accept_encoding_enum_8hpp__dep__incl.map  _accept_encoding_enum_8hpp__dep__incl.md5  _accept_encoding_enum_8hpp__incl.map  _accept_encoding_enum_8hpp__incl.md5  _accept_encoding_enum_8hpp_source.html  _accept_ranges_8hpp.html  _accept_ranges_8hpp.js  _accept_ranges_8hpp__dep__incl.map  _accept_ranges_8hpp__dep__incl.md5  _accept_ranges_8hpp__incl.map  _accept_ranges_8hpp__incl.md5  _accept_ranges_8hpp_source.html  _base64_viewer_8hpp.html  _base64_viewer_8hpp__incl.map  _base64_viewer_8hpp__incl.md5  _base64_viewer_8hpp_source.html  _cache_control_8hpp.html  _cache_control_8hpp__dep__incl.map  _cache_control_8hpp__dep__incl.md5  _cache_control_8hpp__incl.map  _cache_control_8hpp__incl.md5  _cache_control_8hpp_source.html  _client_8hpp.html  _client_8hpp.js  _client_8hpp__incl.map  _client_8hpp__incl.md5  (+805 more)
.github/workflows/: doxygen.yml
benchmarks/: CMakeLists.txt  README.md  main.py
benchmarks/Http/: BenchHttp.cpp  CMakeLists.txt
benchmarks/Json/: BenchJson.cpp  CMakeLists.txt  bench.html
cmake/: ThothConfig.cmake.in
docs/doxygen/img/: Thoth-logo.ai
doxygen/: Doxyfile  doxygen-awesome.css  styles.css
doxygen/doxygen-custom/: header.html
examples/: Basic1.cpp  BodyToFile1.cpp  BodyToFile2.cpp  CMakeLists.txt  Json1.cpp  Localhost.cpp  Request1.cpp  Request2.cpp  YoutubeJson.cpp  YoutubeJson1.cpp  YoutubeJson2.cpp  YoutubeJson3.cpp  main.cpp
examples/Env1/: .env  Env.cpp
examples/Env2/: .env  Env.cpp
examples/VsNlohmann/: main.cpp  output
html/: __base_8hpp.html  __base_8hpp.js  __base_8hpp__dep__incl.map  __base_8hpp__incl.md5  _client_8hpp.js  _connect_method_8hpp.html  _connect_method_8hpp.js  _connect_method_8hpp__incl.md5  _cow_8hpp__dep__incl.md5  _cow_8hpp__incl.md5  _delete_method_8hpp.html  _delete_method_8hpp__incl.map  _delete_method_8hpp__incl.md5  _delete_method_8hpp_source.html  _env_8hpp.html  _env_8hpp.js  _env_8hpp__incl.map  _functional_8hpp.html  _functional_8hpp.js  _get_method_8hpp__dep__incl.md5  _get_method_8hpp__incl.md5  _hash_8hpp.js  _head_method_8hpp__incl.md5  _head_method_8hpp_source.html  _headers_8hpp.html  _headers_8hpp__dep__incl.md5  _headers_8hpp__incl.md5  _headers_8hpp_source.html  _json_8hpp.html  _json_8hpp.js  _json_8hpp__dep__incl.md5  _json_8hpp__incl.md5  _json_object_8hpp.html  _json_object_8hpp__incl.map  _json_object_8hpp__incl.md5  _json_object_8hpp_source.html  _last_match_variant_8hpp.js  _last_match_variant_8hpp__incl.map  _last_match_variant_8hpp__incl.md5  _last_match_variant_8hpp_source.html  (+162 more)
html/search/: all_0.js  all_11.js  all_13.js  all_14.js  all_15.js  all_18.js  all_2.js  all_5.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_2.js  classes_9.js  classes_b.js  classes_c.js  concepts_0.js  enums_0.js  enumvalues_3.js  enumvalues_7.js  enumvalues_9.js  enumvalues_a.js  enumvalues_b.js  enumvalues_e.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_8.js  files_9.js  files_b.js  files_d.js  files_f.js  functions_1.js  functions_11.js  functions_15.js  functions_2.js  functions_4.js  (+25 more)
images/: Thoth-logo.ai
include/Thoth/Dsa/: Cow.hpp  Cow.tpp  FileOutputRange.hpp  FileOutputRange.tpp  LinearMap.hpp  LinearMap.tpp
include/Thoth/Http/: Client.hpp  Client.tpp  Headers.hpp  Headers.tpp  HttpClient.hpp  HttpClient.tpp  HttpHeaders.hpp  HttpHeaders.tpp  HttpStatusCodeEnum.hpp  HttpUrl.hpp  HttpUrl.tpp  QueryParams.hpp  RequestError.hpp  RequestError.tpp
include/Thoth/Http/HttpMethods/: ConnectHttpMethod.hpp  DeleteHttpMethod.hpp  GetHttpMethod.hpp  HeadHttpMethod.hpp  OptionsHttpMethod.hpp  PatchHttpMethod.hpp  PostHttpMethod.hpp  PutHttpMethod.hpp  TraceHttpMethod.hpp
include/Thoth/Http/Methods/: ConnectMethod.hpp  DeleteMethod.hpp  GetMethod.hpp  HeadMethod.hpp  OptionsMethod.hpp  PatchMethod.hpp  PostMethod.hpp  PutMethod.hpp  TraceMethod.hpp
include/Thoth/Http/NHeaders/: Headers.hpp  Headers.tpp  _base.hpp
include/Thoth/Http/Request/: HttpMethods.hpp  HttpRequest.hpp  HttpRequest.tpp  HttpUrl.hpp  HttpUrl.tpp  QueryParams.hpp  QueryParams.tpp  Request.hpp  (+3 more)
include/Thoth/Json/: Json.hpp  Json.tpp
include/Thoth/NJson/: Definitions.hpp  Json.hpp  Json.tpp  JsonObject.hpp  JsonObject.tpp  StringRef.hpp  StringRef.tpp  Utils.hpp
include/Thoth/String/: Base64Viewer.hpp  Base64Viewer.tpp  UnicodeView.hpp  UnicodeView.tpp  UnicodeViewer.hpp  UnicodeViewer.tpp  Utils.hpp  Utils.tpp  _base.hpp
include/Thoth/Utils/: Env.hpp  FirstConvertibleVariant.hpp  Functional.hpp  Hash.hpp  LastMatchVariant.hpp  Monostate.hpp  Overloads.hpp  Scanner.hpp
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_13.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_c.js  classes_d.js  classes_f.js  concepts_0.js  (+106 more)
src/Thoth/Http/: Client.cpp  Headers.cpp  HttpHeaders.cpp  HttpUrl.cpp  QueryParams.cpp
src/Thoth/Json/: Json.cpp
src/Thoth/NJson/: Json.cpp  JsonObject.cpp  StringRef.cpp
src/Thoth/String/: Utils.cpp
src/Thoth/Utils/: Env.cpp
tests/: CMakeLists.txt  main.cpp
tests/Dsa/: CowTests.cpp  FileOutputTests.cpp  LinearMapTests.cpp
tests/Http/: HeadersTests.cpp  TypedHeaderTests.cpp  UrlTests.cpp
tests/Json/: JsonTests.cpp
tests/String/: StringRefTests.cpp  UnicodeViewerTests.cpp
tests/Utils/: FunctionalTests.cpp  StringUtilsTests.cpp  UtilsTests.cpp
tests/include/: BaseTests.hpp  HttpTests.hpp
tests/src/: HttpTests.cpp
tools/lldb/: ThothLldb.py
(+59 files in other folders)
